tests/parser/command_form/test_03.m.out
In test_03.m, line 5
|     potato +kitten
|            ^^^^^^^ error: expected NEWLINE, found CARRAY instead
MISS_HIT Summary: 1 file(s) analysed, 1 error(s)
