tests/parser/command_form/test_03.m
function test_03()
    kitten = 42;
    potato +kitten
    potato + kitten
    potato+ kitten
    potato+kitten
end
